# SentinelX

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LLM_TRAINING_GUIDE.md  OPENENV_COMPLIANCE.md  README.md  REQUIREMENTS_CHECKLIST.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: ip_reputation_db.json  merchant_registry.json  shell_company_graph.json  transaction_profiles.json
sentinel_x/: README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
sentinel_x/server/: Dockerfile  app.py  fraud_investigation_env.py  grader.py  reward.py
sentinel_x/server/tasks/: easy.py  hard.py  medium.py
sentinelx/: __init__.py  client.py  models.py
sentinelx/adversary/: __init__.py  fraudster.py  strategies.py
sentinelx/server/: __init__.py  app.py  environment.py  graders.py
server/: app.py
tasks/: __init__.py  account_takeover.py  money_laundering.py  stolen_card.py
tests/: test_adversary.py  test_environment.py  test_graders.py  test_models.py
